# autodox-rust

./: Cargo.toml  MakeFile  README.md  dfx.json  index.html  package-lock.json  package.json  webpack.config.js
src/: main.rs
src/TEX/: Cargo.toml
src/TEX/src/: lib.rs
src/TEX_assets/: Cargo.toml  index.html  index.js
src/TEX_assets/assets/: cards.css  editor.css  main.css  nav_bar.css
src/TEX_assets/src/: index.html  index.js  main.rs
src/TEX_assets/src/components/: nav_bar.rs  tree_list.rs
src/components/: card.rs  mod.rs
src/declarations/TEX/: TEX.did.d.ts  TEX.did.js  index.js
src/declarations/TEX_assets/: index.js
src/declarations/users/: index.js  users.did  users.did.d.ts  users.did.js
src/editor/: Cargo.toml
src/editor/src/: initial_value.rs  initial_value_handler.rs  lib.rs  video_list.rs
src/editor/src/plugins/: main.rs  mod.rs
src/editor/src/plugins/draggable/: drag_handler.rs  drag_over_handler.rs  draggable.rs  drop_handler.rs  get_target.rs  mod.rs
src/editor/src/plugins/drop_down/: click_away.rs  drop_down.rs  main.rs  mod.rs
src/editor/src/plugins/keyboard_actions/: keyboard_actions.rs  main.rs  mod.rs
src/editor/src/plugins/mark_down/: main.rs  mark_down.rs  mod.rs
src/editor/src/plugins/mention/: main.rs  mention.rs  mod.rs
src/editor/src/plugins/table_formula/: main.rs  mod.rs  table_formula.rs
src/extend_traits/: Cargo.toml
src/extend_traits/src/: lib.rs  target_element.rs
