[package]
name = "main"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    "src/TEX",
    "src/editor",
    "src/extend_traits",
]

[dependencies]
editor = { path = "src/editor" }
extend_traits = { path = "src/extend_traits" }
yew = "0.19.3"
wasm-bindgen = "0.2"
html-minifier = "3.0.15"
js-sys = "0.3.56"


[dependencies.web-sys]
version = "0.3.56"

features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
    "DomTokenList", #for class_list
]