[package]
name = "TEX_assets"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    # "../TEX",
    # "../editor",
    # "../extend_traits",
]

[dependencies]
# TEX = { path = "../TEX" }
editor = { path = "../editor" }
extend_traits = { path = "../extend_traits" }
yew = "0.19.3"
wasm-bindgen = "0.2"
html-minifier = "3.0.15"
js-sys = "0.3.56"
candid = "0.7.4"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
futures = "0.3.21"

[dependencies.web-sys]
version = "0.3.56"

features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
    "DomTokenList", #for class_list
]