[package]
name = "extend_traits"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.56"


[dependencies.web-sys]
version = "0.3.56"

features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'Node',
    'Window',
    "DomParser",
    "SupportedType",
    "NodeList",
    "Event",
    "EventTarget",
    "HtmlFormElement",
    "DomRect",
    "DataTransfer",
    "DragEvent",
    "Storage",
    "Selection",
    "Range",
    "console",
    "DomTokenList", #for class_list
]